--- a/.github/workflows/laravel8.yml
+++ b/.github/workflows/laravel8.yml
@@ -7,32 +7,30 @@ on:
     branches: [ main ]
 
 jobs:
+
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout 
         uses: actions/checkout@v2
-
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@master
         with:
           platforms: all
-
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
+          file: ./Dockerfile
+          platforms: linux/amd64
           push: true
-          tags: user/repo:latest
-          build-args:
-            COMPOSER_MEMORY_LIMIT: -1
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/backend-evaluacion_de_proyectos:latest
