--- a/.env.example
+++ b/.env.example
@@ -10,10 +10,10 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=5433
-DB_DATABASE=DB-Evaluacion_de_Proyectos
-DB_USERNAME=postgres
-DB_PASSWORD=
+POSTGRES_PORT=5433
+POSTGRES_DB=DB-Evaluacion_de_Proyectos
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
