--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,23 @@
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - 8181:8181
-    depends_on:
-      - db
+  # app:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - 8181:8181
+  #   depends_on:
+  #     - db
   db:
     image: postgres:12
     restart: always
     env_file:
       - .env
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${DB_USERNAME}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_DATABASE}
     ports:
-      - ${POSTGRES_PORT}:5432
+      - ${DB_PORT}:5432
     volumes:
       - ./config/postgresql.conf:/etc/postgresql.conf
       - /srv/docker/postgresql:/var/lib/postgresql
